# LazyLLM

./: .env.memory  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CODE_OF_CONDUCT.cn.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-light  Makefile  NOTICE  README.CN.md  README.ENG.md  README.md  _build_backend.py  deploy_ft_service.py  deploy_infer_service.py  example.py  fix_progress.md  gen_editable.py  mkdocs.yml  pr_1054_body.md  pyproject.toml  pyproject_cp.toml  queue.db  requirements.full.txt  requirements.txt  requirements_full.txt  review_20260415.md  setup.py  test.py  test1.py  test_graphrag.py  test_image_model.py  test_pt.py  version.txt.1
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  main.yml  mergify.yml  publish_release.yml  pull_request_template.md  save.yml  sync-repos.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  performance.md  refactor.md
.github/issue_template/: enhancement.yml  performance.yml
.github/pull_request_template/: README.md  documentation.md  feature.md  security.md  testing.md
.github/scripts/: check_stale_editable.py
.github/workflows/: cpp_ext.yml  cpp_ext_regression.yml  deploy_doc.yml  docker-build.yml  k8s_test.yml  lint.yml  lint_and_doc_check.yml  macOS_test.yml  main copy.yml  main.yml  poetry_test.yml  portey_test.yml  publish_release.yml  remove_labels.yml  reusable_run_tests.yml  run_full_tests.yml  sync-repos.yml  test.yml  test_build_doc.yml  test_cpp_ext.yml  testmon_test_with_file_modified.yml  upload.yml  win_test.yml
LazyAgents_rag_demo/: init_project.py  main.py
LazyAgents_rag_demo/agents/: pipeline.py  plot_agent.py  rag_agent.py  sql_agent.py  summary_agent.py
LazyAgents_rag_demo/data/: sales_data.csv
LazyAgents_rag_demo/docs/: blackfriday.xlsx  medical.xlsx  各类医疗卫生机构诊疗人次数.xlsx
LazyAgents_rag_demo/frontend/: app.py
LazyAgents_rag_demo/tools/: data_plot_tool.py  query_executor.py  rag_tool.py  summarizer.py  text2sql_tool.py  xlsx2sqlite.py
csrc/: CMakeLists.txt  cpp_ext_build.py  lazyllm.hpp  setup.py
csrc/adaptor/: adaptor.cpp  adaptor_base_wrapper.hpp  document_store.hpp
csrc/binding/: binding_utils.cpp  binding_utils.hpp  doc.cpp  export_add_doc_str.cpp  export_doc_node.cpp  export_node_transform.cpp  export_sentence_splitter.cpp  export_text_splitter_base.cpp  lazyllm.cpp  lazyllm.hpp  map_binding_helper.hpp
csrc/bridge/: bridge.cpp  document_store.hpp
csrc/cmake/: download_tokenizers.cmake  tests.cmake  third_party.cmake
csrc/core/include/: adaptor_base.hpp  doc_node.hpp  map_params.hpp  node_transform.hpp  sentence_splitter.hpp  text_spliter_base.hpp  text_splitter_base.hpp  thread_pool.hpp  tokenizer.hpp  unicode_processor.hpp  utils.hpp
csrc/core/src/: doc_node.cpp  node_transform.cpp  sentence_splitter.cpp  text_splitter_base.cpp  unicode_processor.cpp  utils.cpp
csrc/include/: doc_node.h  doc_node.hpp  utils.hpp
csrc/scripts/: build_debug.sh  build_release.sh  build_test.sh  config_cmake.sh
csrc/src/: doc_node.cpp  docnode.cpp
csrc/tests/: test_adaptor_base.cpp  test_doc_node.cpp  test_docnode.cpp  test_map_params.cpp  test_node_transform.cpp  test_sentence_splitter.cpp  test_smoke.cpp  test_text_splitter_base.cpp  test_thread_pool.cpp  test_tokenizer.cpp  test_unicode_processor.cpp  test_utils.cpp
data_pipeline_res/AddSuffix/: AddSuffix_results.jsonl  AddSuffix_results.jsonl.pkl
data_pipeline_res/chunk_to_qa/: chunk_to_qa_results.jsonl  chunk_to_qa_results.jsonl.json
data_pipeline_res/print_chunks/: print_chunks_results.jsonl  print_chunks_results.jsonl.json
data_pipeline_res/process_uppercase/: process_uppercase_results.jsonl
data_pipeline_res/qa_scorer/: qa_scorer_results.jsonl
data_pipeline_res/rich_content/: rich_content_results.jsonl
data_pipeline_res/score_filter/: score_filter_results.jsonl  score_filter_results.jsonl.json
data_pipeline_res/text_to_chunks/: text_to_chunks_results.jsonl
docs/: Makefile  add_docstrings.py  gen_docstrings.py  gen_mkdocs_yaml.py  ipynb2md.py  link_assets.py  mkdocs.template.yml  nav_en.yml  nav_zh.yml  requirements.txt  run.sh  test_git_agent.py  test_llm_manager.py  tracing-system-design.md
docs/en/: index.md
docs/lazyllm-skill/: SKILL.md
docs/source/: conf.py  index.rst
docs/zh/: add_docstrings.py  index.md  requirements.txt
examples/: agent.py  agent_with_mcp.py  barrier.py  chatbot.py  chatbot_online.py  chatbot_online_cli.py  chatbot_powermem_cli.py  chatbot_ppio.py  debug_round2.py  distill_deepseek_r1.py  example.py  example_alpaca.py  example_autofinetune.py  example_embed.py  example_lightllm.py  example_module_tdi.py  example_onlineChatModule.py  example_onlineEmbedtModule.py  example_prompter.py  example_vllm.py  git_review.py  infer_auto.py  infer_lightllm.py  infer_vllm.py  mcp_use_for_agent.py  module.py  multimodal_agent.py  multimodal_chatbot_online.py  painting.py  pp_ocrv5_mobile.py  prompter.py  rag.py  rag_document_test.py  rag_map_store_with_milvus_index.py  rag_master.py  rag_milvus_store.py  rag_online.py  rag_test_muti_docs.py  react_agent_with_skills.py  story.py  (+6 more)
examples/rag/: doc_service_mock_example.py  doc_service_standalone.py
examples/rag_with_parsing_service/: README.CN.md  README.md  (+4 more)
lazyllm/: AGENTS.md  __init__.py  _bootstrap.py  client.py  common.py  configs.py  cpp.py  flow.py  flows.py  hook.py  install.py  jiebatest.py  launcher.py  launchers.py  lazyml.py  main.py  module.py  patch.py  redis_client.py  test.py
lazyllm-skill/: SKILL.md
scripts/: check_requirements.py  check_submodule_changes.py  flake8_no_direct_imports.py  generate_toml_optional_deps.py  split_requirements.sh  test_reader_direct_init.py
tests/: README.md  conftest.py  requirements.txt  requirements_linux.txt  requirements_mac.txt  test_common.py  test_component.py  test_config.py  test_cpp_class_decorator.py  test_cpp_proxy_decorator.py  test_flow.py  test_launcher.py  test_moduler.py  test_option.py  test_thirdparty.py  tools.py  utils.py
(+1633 files in other folders)
